<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mediumPurple"
        tools:ignore="MissingConstraints"
        />

    <LinearLayout
        android:id="@+id/LLBaza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LLText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:text="@string/name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/surNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="19dp"
                android:layout_gravity="end"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:text="@string/surName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="end"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:text="@string/age"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/roleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:layout_gravity="end"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:text="@string/role"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/name_hint"
                android:background="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/surNameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/surName_hint"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ageET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/white"
                android:hint="@string/age_hint"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spiner_RoleS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/white"

                 />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/save"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/listRoleLV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/age"
        android:textSize="20sp" />

</LinearLayout>